--- a/CalcWPF/MainWindow.xaml
+++ b/CalcWPF/MainWindow.xaml
@@ -37,7 +37,7 @@
         <Button Grid.Column="2" Grid.Row="4" Margin="1" FontSize="24">3</Button>
         <Button Grid.Column="3" Grid.Row="4" Margin="1" FontSize="24">-</Button>
         <Button Grid.Column="0" Grid.Row="5" Margin="1" FontSize="24">+/-</Button>
-        <Button Grid.Column="1" Grid.Row="5" Margin="1" FontSize="24">0</Button>
+        <Button x:Name="button0" Grid.Column="1" Grid.Row="5" Margin="1" FontSize="24" >0</Button>
         <Button Grid.Column="2" Grid.Row="5" Margin="1" FontSize="24">^</Button>
         <Button Grid.Column="3" Grid.Row="5" Margin="1" FontSize="24">+</Button>
         <Button Grid.Column="4" Grid.Row="1" Margin="1" FontSize="24">√</Button>
